add comparsion explanation

--- a/HW4/HW4.ipynb
+++ b/HW4/HW4.ipynb
@@ -1234,15 +1234,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 三个模型训练的预测结果比较\n",
+    "### 三個模型的訓練預測結果比較\n",
     "\n",
     "#### RNN\n",
-    "- 我的 hidden size 设为 \n",
-    "\n",
+    "- 我的 RNN hidden size 設為 64 ， num_layers 設為 2 \n",
+    "- 從整個訓練的過程來看，training loss 無法有效下降，可能是遇到**梯度消失**的問題，因為自己也有試過其他參數跑 RNN，結果大同小異，training loss 都無法有效地減少。\n",
+    "- 在整個訓練集訓練後的預測結果為準確度 **0.1552** (我也有嘗試切 80% 訓練集 20% 驗證集，其在驗證集的表現度，也大約是十幾%)\n",
     "\n",
     "#### LSTM\n",
+    "- 我的 LSTM hidden size 設為 64 ， num_layers 設為 2 \n",
+    "- LSTM 引入了 cell vector $C(t)$， 透過**線性相加**的方式可以使梯度更好的被傳遞，解決了RNN可能遇到梯度消失的問題。\n",
+    "- 從整個訓練的過程來看，training accuracy 每一個 epoch 都有在提升，直到 10 個 epochs 以後，成長才趨於平緩 \n",
+    "- 在整個訓練集訓練後的預測結果為準確度 **0.9858** (我也有嘗試切 80% 訓練集 20% 驗證集，其在驗證集的表現度，也有達到 93%)\n",
     "\n",
-    "#### GRU"
+    "#### GRU\n",
+    "- 我的 LSTM hidden size 設為 128 ， num_layers 設為 4 \n",
+    "- GRU 繼承了 LSTM 容易傳播梯度的特點，同時又**減少了學習參數與計算量**\n",
+    "- 從整個訓練的過程來看，training accuracy 在第一個 epoch 提升很快，之後每個 epoch 也是有在穩定成長 \n",
+    "- 在整個訓練集訓練後的預測結果為準確度 **0.9918** (我也有嘗試切 80% 訓練集 20% 驗證集，其在驗證集的表現度，也有達到 96%)\n",
+    "\n",
+    "#### 分析：\n",
+    "資料集類似MNIST，在圖片中完全黑暗的patch，RNN模型可能因梯度消失或無法順利傳遞，導致此模型訓練的結果不是很好。\n",
+    "而我使用了GRU作為我最後預測出 HW4_prob1.csv 的模型，因我實驗結果做出比 LSTM 好，可能原因為我使用的參數較多，也可能此資料集較適合使用 GRU，因有文獻指出，在大量資料集下，LSTM 的表現度可能超越 RNN 與 GRU。"
    ]
   },
   {
