--- a/HW4/HW4.ipynb
+++ b/HW4/HW4.ipynb
@@ -1453,13 +1453,13 @@
     "with torch.no_grad():\n",
     "    new_data = model(X).numpy()\n",
     "\n",
-    "plt.figure(figsize=(10, 6))  # 调整图表大小\n",
+    "plt.figure(figsize=(10, 6)) \n",
     "plt.scatter(data['U1'], data['U2'], color='blue', alpha=0.2, s=10, edgecolor='blue', label='Original Data')\n",
     "plt.scatter(new_data[:, 0], new_data[:, 1], color='red', alpha=0.2, s=10, edgecolor='red', label='Generated Data')\n",
     "plt.legend()\n",
     "plt.xlabel('U1')\n",
     "plt.ylabel('U2')\n",
-    "plt.grid(True)  # 添加网格\n",
+    "plt.grid(True)  \n",
     "plt.title('Comparison of Original and Generated Data')\n",
     "plt.show()\n",
     "\n"
