--- a/HW5/HW5.ipynb
+++ b/HW5/HW5.ipynb
@@ -9,9 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cuda')"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -27,12 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load and preprocess the MNIST for anamoly detection\n",
     "from torch.utils.data import DataLoader\n",
+    "import torch\n",
     "transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.1307,), (0.3081,))])\n",
     "mnist_data = datasets.MNIST(root='./data', train=True, download=True, transform=transform)\n",
     "\n",
@@ -41,13 +53,21 @@
     "indices = [i for i, (img, label) in enumerate(mnist_data) if label in target_digits]\n",
     "filtered_dataset = Subset(mnist_data, indices)\n",
     "\n",
+    "label_mapping = {1: 0, 3: 1, 5: 2, 7: 3}\n",
+    "\n",
+    "def map_labels(batch):\n",
+    "    inputs, labels = zip(*batch)\n",
+    "    labels = torch.tensor([label_mapping[label] for label in labels])\n",
+    "    inputs = torch.stack(inputs)\n",
+    "    return inputs, labels\n",
+    "\n",
     "# dataloader for the filtered dataset\n",
-    "train_loader = DataLoader(filtered_dataset, batch_size=64, shuffle=True)"
+    "train_loader = DataLoader(filtered_dataset, batch_size=64, shuffle=True, collate_fn=map_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,9 +100,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 384/384 [00:03<00:00, 111.81it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/10], Train Loss: 0.1295, Train Accuracy: 0.9605\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 384/384 [00:02<00:00, 145.82it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [2/10], Train Loss: 0.0287, Train Accuracy: 0.9906\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 384/384 [00:02<00:00, 144.82it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [3/10], Train Loss: 0.0198, Train Accuracy: 0.9936\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 384/384 [00:02<00:00, 145.52it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [4/10], Train Loss: 0.0158, Train Accuracy: 0.9953\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 384/384 [00:02<00:00, 145.21it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [5/10], Train Loss: 0.0131, Train Accuracy: 0.9957\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 384/384 [00:02<00:00, 145.29it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [6/10], Train Loss: 0.0098, Train Accuracy: 0.9968\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 384/384 [00:02<00:00, 145.91it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [7/10], Train Loss: 0.0097, Train Accuracy: 0.9973\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 384/384 [00:02<00:00, 145.51it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [8/10], Train Loss: 0.0084, Train Accuracy: 0.9976\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 384/384 [00:02<00:00, 145.45it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [9/10], Train Loss: 0.0072, Train Accuracy: 0.9975\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 384/384 [00:02<00:00, 146.13it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [10/10], Train Loss: 0.0066, Train Accuracy: 0.9978\n",
+      "Finished Training\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from tqdm import tqdm\n",
@@ -120,8 +289,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
