--- a/HW5/HW5.ipynb
+++ b/HW5/HW5.ipynb
@@ -1351,9 +1351,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal threshold based on F1 score with features: -0.11632542558040748\n",
+      "F1 Score at optimal threshold with features: 0.9352050980961302\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.12      1.00      0.22      4912\n",
+      "           1       0.00      0.00      0.00     35441\n",
+      "\n",
+      "    accuracy                           0.12     40353\n",
+      "   macro avg       0.06      0.50      0.11     40353\n",
+      "weighted avg       0.01      0.12      0.03     40353\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_30615/1206498076.py:12: RuntimeWarning: invalid value encountered in divide\n",
+      "  f1_scores = 2 * (precisions * recalls) / (precisions + recalls)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.ensemble import IsolationForest\n",
     "\n",
