--- a/HW5/HW5.ipynb
+++ b/HW5/HW5.ipynb
@@ -1404,6 +1404,97 @@
     "print(\"F1 Score at optimal threshold with features:\", f1_scores[optimal_idx])\n",
     "print(classification_report(y_val_binary, y_pred_features))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import chromadb\n",
+    "chroma_client = chromadb.Client()\n",
+    "\n",
+    "collection = chroma_client.create_collection(name=\"qa_collection\")\n",
+    "collection.add(\n",
+    "    documents=[\"Cloud computing is a technology that allows for the storage, management, and processing of data on remote servers accessed via the internet, rather than on local servers or personal computers. It enables users and businesses to utilize online services to run applications or store data.\", \n",
+    "               \"Mental health refers to the state of someone's emotional, psychological, and social well-being. A person with good mental health can handle daily stresses, perform productive work, and contribute to their community.\",\n",
+    "               \"The ancient Egyptians built pyramids primarily as tombs for the pharaohs, the rulers of ancient Egypt. They served to house their remains and belongings for use in the afterlife. The size and complexity of the pyramids reflect the pharaohs' power and religious beliefs about the afterlife.\"\n",
+    "            ],\n",
+    "    metadatas=[{'source':'Tech'},\n",
+    "               {'source':'Healthy'},\n",
+    "               {'source':'geography'}\n",
+    "            ],\n",
+    "    ids=['doc_tech','doc_health','doc_geo']\n",
+    ")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most relevant information:\n",
+      "Document ID: doc_tech\n",
+      "Content: Cloud computing is a technology that allows for the storage, management, and processing of data on remote servers accessed via the internet, rather than on local servers or personal computers. It enables users and businesses to utilize online services to run applications or store data.\n",
+      "Metadata: {'source': 'Tech'}\n",
+      "-----\n",
+      "Most relevant information:\n",
+      "Document ID: doc_health\n",
+      "Content: Mental health refers to the state of someone's emotional, psychological, and social well-being. A person with good mental health can handle daily stresses, perform productive work, and contribute to their community.\n",
+      "Metadata: {'source': 'Healthy'}\n",
+      "-----\n",
+      "Most relevant information:\n",
+      "Document ID: doc_geo\n",
+      "Content: The ancient Egyptians built pyramids primarily as tombs for the pharaohs, the rulers of ancient Egypt. They served to house their remains and belongings for use in the afterlife. The size and complexity of the pyramids reflect the pharaohs' power and religious beliefs about the afterlife.\n",
+      "Metadata: {'source': 'geography'}\n",
+      "-----\n"
+     ]
+    }
+   ],
+   "source": [
+    "def query(question_text):\n",
+    "    results = collection.query(\n",
+    "        query_texts = [question_text],\n",
+    "        n_results = 1\n",
+    "    )\n",
+    "\n",
+    "    print(\"Most relevant information:\")\n",
+    "    print(f\"Document ID: {results['ids'][0][0]}\")\n",
+    "    print(f\"Content: {results['documents'][0][0]}\")\n",
+    "    print(f\"Metadata: {results['metadatas'][0][0]}\")\n",
+    "    print(\"-----\")\n",
+    "\n",
+    "query(\"What is cloud computing?\")\n",
+    "query(\"What is mental health?\")\n",
+    "query(\"Why did the ancient Egyptians build pyramids?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5-3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1422,7 +1513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
