--- a/HW5/HW5.ipynb
+++ b/HW5/HW5.ipynb
@@ -1491,10 +1491,284 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████| 338M/338M [00:03<00:00, 104MiB/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import clip\n",
+    "from PIL import Image\n",
+    "import requests\n",
+    "from io import BytesIO\n",
+    "\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "model, preprocess = clip.load('ViT-B/32', device=device)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def load_image(image_path):\n",
+    "    image = Image.open(image_path)\n",
+    "    return preprocess(image).unsqueeze(0).to(device)\n",
+    "\n",
+    "def prepare_text(description):\n",
+    "    return clip.tokenize([description]).to(device)\n",
+    "\n",
+    "def compare_image_text(image_path, description):\n",
+    "    image = load_image(image_path)\n",
+    "    text = prepare_text(description)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        image_features = model.encode_image(image)\n",
+    "        text_features = model.encode_text(text)\n",
+    "\n",
+    "        # Correctly calculate the similarity score using cosine similarity and logit scale\n",
+    "        logit_scale = model.logit_scale.exp()\n",
+    "        logits_per_image = logit_scale * image_features @ text_features.t()\n",
+    "        probs = logits_per_image.softmax(dim=-1).cpu().numpy()\n",
+    "\n",
+    "    return probs[0][0]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Description: 'A monkey sitting by trash bins on a city street, looking directly at the camera.'\n",
+      "Match Probability: 1.00\n",
+      "\n",
+      "Description: 'A large animal searching through garbage in an urban environment.'\n",
+      "Match Probability: 1.00\n",
+      "\n",
+      "Description: 'A cat sitting on a sunny window ledge overlooking a busy street.'\n",
+      "Match Probability: 1.00\n",
+      "\n",
+      "Description: 'An animal outside during the daytime.'\n",
+      "Match Probability: 1.00\n",
+      "\n",
+      "Description: 'A dog rummaging through trash bags near a park bench on a rainy day.'\n",
+      "Match Probability: 1.00\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = \"./my_bro.png\"  # Change to your actual image path\n",
+    "\n",
+    "# Descriptions to test with the image\n",
+    "descriptions = [\n",
+    "    \"A monkey sitting by trash bins on a city street, looking directly at the camera.\",\n",
+    "    \"A large animal searching through garbage in an urban environment.\",\n",
+    "    \"A cat sitting on a sunny window ledge overlooking a busy street.\",\n",
+    "    \"An animal outside during the daytime.\",\n",
+    "    \"A dog rummaging through trash bags near a park bench on a rainy day.\"\n",
+    "]\n",
+    "\n",
+    "# Loop through each description and compute the match probability\n",
+    "for description in descriptions:\n",
+    "    match_probability = compare_image_text(image_path, description)\n",
+    "    print(f\"Description: '{description}'\")\n",
+    "    print(f\"Match Probability: {match_probability:.2f}\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Category: Monkey in Urban Environment\n",
+      "Description: 'A monkey beside trash bins in a busy urban setting.' - Probability: 0.0000\n",
+      "Description: 'A monkey climbing on a metal barrier near trash bins.' - Probability: 0.0000\n",
+      "Description: 'A monkey peering out from behind city trash bins.' - Probability: 1.0000\n",
+      "\n",
+      "Category: Animal Interactions with Trash\n",
+      "Description: 'A raccoon rummaging through trash bins in a city.' - Probability: 1.0000\n",
+      "Description: 'A dog sniffing around garbage bags in an alley.' - Probability: 0.0000\n",
+      "Description: 'A cat hiding behind trash bins on a sidewalk.' - Probability: 0.0000\n",
+      "\n",
+      "Category: Urban Wildlife\n",
+      "Description: 'A bird perched on trash bins in a city.' - Probability: 0.0000\n",
+      "Description: 'A squirrel scavenging near city trash bins.' - Probability: 0.0000\n",
+      "Description: 'A rat running around near urban garbage.' - Probability: 1.0000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import clip\n",
+    "from PIL import Image\n",
+    "\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "model, preprocess = clip.load('ViT-B/32', device=device)\n",
+    "\n",
+    "def load_image(image_path):\n",
+    "    image = Image.open(image_path)\n",
+    "    return preprocess(image).unsqueeze(0).to(device)\n",
+    "\n",
+    "def prepare_text(descriptions):\n",
+    "    return clip.tokenize(descriptions).to(device)\n",
+    "\n",
+    "def compare_image_text(image_path, descriptions):\n",
+    "    image = load_image(image_path)\n",
+    "    texts = prepare_text(descriptions)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        image_features = model.encode_image(image)\n",
+    "        text_features = model.encode_text(texts)\n",
+    "\n",
+    "        logit_scale = model.logit_scale.exp()\n",
+    "        logits_per_image = logit_scale * image_features @ text_features.t()\n",
+    "        probs = logits_per_image.softmax(dim=-1).cpu().numpy()\n",
+    "\n",
+    "    return probs.flatten()\n",
+    "\n",
+    "image_path = \"./my_bro.png\"  \n",
+    "\n",
+    "# descriptions = [\n",
+    "#     \"A monkey rummaging through trash bins on a city street.\",\n",
+    "#     \"A monkey sitting by trash bins on a city street looking curious.\",\n",
+    "#     \"A monkey looking directly at the camera surrounded by trash.\"\n",
+    "# ]\n",
+    "\n",
+    "# # Running the comparison\n",
+    "# probabilities = compare_image_text(image_path, descriptions)\n",
+    "\n",
+    "\n",
+    "# # Printing each description with its respective probability\n",
+    "# print(\"Descriptions and their matching probabilities:\")\n",
+    "# for desc, prob in zip(descriptions, probabilities):\n",
+    "#     print(f\"Description: '{desc}' - Probability: {prob:.4f}\")\n",
+    "categories = {\n",
+    "    \"Monkey in Urban Environment\": [\n",
+    "        \"A monkey beside trash bins in a busy urban setting.\",\n",
+    "        \"A monkey climbing on a metal barrier near trash bins.\",\n",
+    "        \"A monkey peering out from behind city trash bins.\"\n",
+    "    ],\n",
+    "    \"Animal Interactions with Trash\": [\n",
+    "        \"A raccoon rummaging through trash bins in a city.\",\n",
+    "        \"A dog sniffing around garbage bags in an alley.\",\n",
+    "        \"A cat hiding behind trash bins on a sidewalk.\"\n",
+    "    ],\n",
+    "    \"Urban Wildlife\": [\n",
+    "        \"A bird perched on trash bins in a city.\",\n",
+    "        \"A squirrel scavenging near city trash bins.\",\n",
+    "        \"A rat running around near urban garbage.\"\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "# Running the comparisons for each category\n",
+    "for category, descriptions in categories.items():\n",
+    "    print(f\"Category: {category}\")\n",
+    "    probabilities = compare_image_text(image_path, descriptions)\n",
+    "    for desc, prob in zip(descriptions, probabilities):\n",
+    "        print(f\"Description: '{desc}' - Probability: {prob:.4f}\")\n",
+    "    print()  # New line for better separation of categories\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "** Topic 1: Classes **\n",
+      "'A dog' - Probability: 0.0014\n",
+      "'A cat' - Probability: 0.0029\n",
+      "'A monkey' - Probability: 0.9956\n",
+      "\n",
+      "** Topic 2: Generality **\n",
+      "'An animal' - Probability: 0.0262\n",
+      "'A monkey' - Probability: 0.9219\n",
+      "'A Macaca' - Probability: 0.0520\n",
+      "\n",
+      "** Topic 3: Details **\n",
+      "'A monkey' - Probability: 0.0002\n",
+      "'A monkey in a trash can' - Probability: 0.3140\n",
+      "'An aggressive monkey coming out from a trash can, staring at the camera' - Probability: 0.6860\n",
+      "\n",
+      "** Topic 4: Wrong class with details **\n",
+      "'A dog' - Probability: 0.0010\n",
+      "'A dog in a trash can' - Probability: 0.1081\n",
+      "'An aggressive dog coming out from a trash can, staring at the camera' - Probability: 0.8911\n",
+      "\n",
+      "** Topic 5: Correct answers **\n",
+      "'A monkey' - Probability: 0.7866\n",
+      "'A trash can' - Probability: 0.0925\n",
+      "'A plastic bag' - Probability: 0.1207\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import clip\n",
+    "from PIL import Image\n",
+    "\n",
+    "# Setup device and load the CLIP model\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "model, preprocess = clip.load('ViT-B/32', device=device)\n",
+    "\n",
+    "# Load and preprocess the image\n",
+    "image_path = './my_bro.png'  # Replace with your actual image file path\n",
+    "image = preprocess(Image.open(image_path)).unsqueeze(0).to(device)\n",
+    "\n",
+    "# Define the topics and corresponding descriptions\n",
+    "topics = [\n",
+    "    \"Classes\",\n",
+    "    \"Generality\",\n",
+    "    \"Details\",\n",
+    "    \"Wrong class with details\",\n",
+    "    \"Correct answers\",\n",
+    "]\n",
+    "texts = [\n",
+    "    [\"A dog\", \"A cat\", \"A monkey\"],  # Classes\n",
+    "    [\"An animal\", \"A monkey\", \"A Macaca\"],  # Generality\n",
+    "    [\"A monkey\", \"A monkey in a trash can\", \"An aggressive monkey coming out from a trash can, staring at the camera\"],  # Details\n",
+    "    [\"A dog\", \"A dog in a trash can\", \"An aggressive dog coming out from a trash can, staring at the camera\"],  # Wrong class with details\n",
+    "    [\"A monkey\", \"A trash can\", \"A plastic bag\"],  # Correct answers\n",
+    "]\n",
+    "\n",
+    "# Compare image with texts and calculate probabilities\n",
+    "for i, comparing_texts in enumerate(texts):\n",
+    "    text_tokens = clip.tokenize(comparing_texts).to(device)\n",
+    "\n",
+    "    # Compute logits and probabilities\n",
+    "    with torch.no_grad():\n",
+    "        logits_per_image, _ = model(image, text_tokens)\n",
+    "        probabilities = logits_per_image.softmax(dim=-1).cpu().numpy()[0]\n",
+    "\n",
+    "    # Print the results for each topic\n",
+    "    print(f\"** Topic {i + 1}: {topics[i]} **\")\n",
+    "    for text, prob in zip(comparing_texts, probabilities):\n",
+    "        print(f\"'{text}' - Probability: {prob:.4f}\")\n",
+    "    print()  # For better readability between topics\n"
+   ]
   }
  ],
  "metadata": {
@@ -1513,7 +1787,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
